--- a/20171110_REST.md
+++ b/20171110_REST.md
@@ -94,11 +94,11 @@ The only part which the HTTP protocol does not enforce is the implementation of 
 2. how one should use the caching headers
 3. what form should the response given back to the caller look alike
 
-All this is what REST provides. It is a description of an architecture where HTTP can be used for the transport layer ~ because it's conveniant.
+All this is what REST provides. It is a description of an architecture where HTTP can be used for the transport layer ~ because it's convenient.
 
 ## 3. What have we learnt
 
-Is my "API RESTful"? 
+If you ask me if my "APIs are RESTful"? 
 To be honest, it doesn't matter. 
 The answer I will give you depend on which side you are in. 
 
@@ -107,7 +107,7 @@ The answer I will give you depend on which side you are in.
 
 Why maybe? Simply because similarly, can I even call my system RESTful if I do not implement some aspects of the __uniform interface__, worse can I even call my system RESTful if it is partially represented as state transition?
 
-
+Maybe the solution is to simply call our services web APIs. If I had to take a side, I would take the "I don't care side".
 
 # Conclusion
 
