--- a/20171110_REST.md
+++ b/20171110_REST.md
@@ -72,7 +72,7 @@ __Uniform interface__
 Resources can be accessed through URIs. There should be a common approach to access them and to act on them which is familiar with all other APIs. Each resource should have only one logical URI and when fetched, should return links which points to related resources.
 The client should be able to discover the whole API content by navigating from the root (HATEOAS). 
 
-## 2. How does REST links with HTTP protocol
+## 2. How does REST link with HTTP protocol
 
 If REST is not related to HTTP, why is everyone linking them together and interchanging them? 
 Even if we look at the big players, Google, Airbnb, Uber, etc..., we can see how they too link both concepts together. 
