--- a/20171110_REST.md
+++ b/20171110_REST.md
@@ -107,7 +107,7 @@ The answer I will give you depend on which side you are in.
 
 Why maybe? Simply because similarly, can I even call my system RESTful if I do not implement some aspects of the __uniform interface__, worse can I even call my system RESTful if it is partially represented as state transition?
 
-Maybe the solution is to simply call our services web APIs. If I had to take a side, I would take the "I don't care side".
+Maybe the solution is to simply call our services __web APIs instead of RESTful APIs__. If I had to take a side, I would take the "I don't care side".
 
 # Conclusion
 
