--- a/20171110_REST.md
+++ b/20171110_REST.md
@@ -111,7 +111,7 @@ Maybe the solution is to simply call our services __web APIs instead of RESTful 
 
 # Conclusion
 
-Today is a big day, my 100th post! I wanted to touch this subject about REST and its misconception. The message that I wanted to transmit is that there isn't any right or wrong. There isn't any side to choose. All that matters is how we master our own APIs. 
+Today is a big day, my 100th post! I wanted to take this opportunity to tackle REST and all its misconception. The message that I wanted to transmit is that there isn't any right or wrong. There isn't any side to choose. All that matters is how we master our own APIs. 
 How we provide to our users a unified way accross all our endpoints to understand and discover our APIs functionalities and best is if they can themselves guess what sort of functionalities we provide. 
 REST provides a handful set of guidelines which, if followed, yield nicely built APIs. 
 But so far, I have never built a truely 100% RESTful web service and I suspect most of us have not. Anyway all I am saying is that it doesn't matter. Maybe one day I will realize that it does actually matter, until then, what matters to me is how comfortable are the users of my APIs. Hope you enjoyed this post as much as I enjoyed writting it! See you next time!
