--- a/20171207_gitlab_ci.md
+++ b/20171207_gitlab_ci.md
@@ -51,7 +51,7 @@ In order to configure the runner, for me it was on Windows, I followed the instr
 
 Once you completed this steps, you should have a fully functional runner read to accept jobs!
 
-![preview_runner]()
+![preview_runner](https://raw.githubusercontent.com/Kimserey/BlogArchive/master/img/20171207_gitlab_ci/1_runner.PNG)
 
 ## 3. Configure your job
 
@@ -124,16 +124,16 @@ _Of course I am assume that the ASP NET Core application runs as a Windows servi
 
 Now that we have our runner setup and we have the `.gitlab-ci.yml` file configured, after that we push our application to master, we can visualize the pipeline on GitLab CI/CD section.
 
-![pipeline]()
+![pipeline](https://raw.githubusercontent.com/Kimserey/BlogArchive/master/img/20171207_gitlab_ci/2_pipeline.PNG)
 
 The pipeline allows to see the job execution as consecutive steps and in which steps the deployment failed. At each steps, we will see a failure sign with a red cross where we can check logs for more details directly from GitLab UI.
 Each step is actually a job and the list of all the jobs ever ran for your repository can be seen in the list of jobs.
 
-![jobs]()
+![jobs](https://raw.githubusercontent.com/Kimserey/BlogArchive/master/img/20171207_gitlab_ci/3_jobs.PNG)
 
 This can allow us to quickly pin point where a problem sits. Lastly, we can also see the environments we have and which application is currently deployed under that environement.
 
-![environment]()
+![environment](https://raw.githubusercontent.com/Kimserey/BlogArchive/master/img/20171207_gitlab_ci/4_environments.PNG)
 
 And that's it, we have setup all the tools required and we now know how to debug in case of errors, we now have a complete solution CI/CD and we are able to manage from GitLab UI any aspect of the integration and deployment!
 
