--- a/20171207_gitlab_ci.md
+++ b/20171207_gitlab_ci.md
@@ -1,6 +1,6 @@
 # How to setup Continuous Integration/Deployment with GitLab for ASP NET Core application
 
-Continuous integration "CI" and continous deployment "CD" (and continous delivery) environments are important to setup to remove respectively the pain of pushing code and risking breaking your master branch and having to manually deploy your application each time you need to either test it or deliver it.
+In any application, Continuous Integration and Continous Deployment environments are important to setup to remove respectively the risking of breaking your application while pushing code to master branch and having to manually deploy your application each time you need to either test it or deliver it. GitLab comes with a set of features to integrate quickly CI/CD to your application __for free!__
 Today we will see how we can setup CI/CD by leveraging the free services from GitLab.
 This post will be composed by 4 parts:
 
