--- a/20171207_gitlab_ci.md
+++ b/20171207_gitlab_ci.md
@@ -13,20 +13,20 @@ This post will be composed by 4 parts:
 
 ## 1. Overview of the scenario
 
-I am assuming that your application is pushed to GitLab.
+The example that I will take is an ASP NET Core application which runs as a Windows service.
 
 My scenario is the most simplistic one may have:
 
- 1. I want to setup continuous integration, meaning build and running test and detect break in my code at each push on master branch.
- 2. I want to deploy on my own local computer (as example, in real life this could be deploying to your VM).
+ 1. I want to setup CI, meaning build and running test and detect break in my code at each push to master branch,
+ 2. I want to setup CD, meaning deploy on my own local computer automatically after each build succeed (of course this is an example, in real life this could be deploying to your VM).
 
 The result will be as followed:
 
 ```
-At every push on master branch, the code will be built, the tests ran, the application published and my application will be accessible with the new changes.
+At every push on master branch, the code will be built, the tests ran, the application published and after the completion of the pipeline, will be accessible with all the new changes.
 ```
 
-In order to setup the flow, only two steps are required:
+In order to setup the flow on GitLab, only two steps are required:
 
  1. Install the GitLab runner
  2. Configure the .gitlab-ci.yml file
