--- a/20171207_gitlab_ci.md
+++ b/20171207_gitlab_ci.md
@@ -42,20 +42,22 @@ There are three keywords important; runner, job and task:
 
 With a runner configured, we can setup an automation process for CI/CD by creating a __pipeline__ composed of multiple jobs where the first job will build our application, the second one will run all our tests then the third and last one will publish the application. 
 
-In order to configure the runner, for me it was on Windows, I followed the instruction from gitlab:
+In order to configure the runner, I followed the instruction from gitlab:
 
 1. Create a folder for example `C:\GitLab-Runner`
 2. Download the binaries [https://docs.gitlab.com/runner/install/windows.html](https://docs.gitlab.com/runner/install/windows.html)
 3. Resgiter the runner [https://docs.gitlab.com/runner/register/index.html#windows](https://docs.gitlab.com/runner/register/index.html#windows) - Make sure you copy the token from `Settings > CI/CD > Runners settings > Specific Runners`.
 4. Install the runner as a Windows service 
 
-Once you completed this steps, you should have a fully functional runner read to accept jobs!
+_Depending on your platform you can follow a different part of GitLab documentation._
+
+Once you completed this steps, you should have a fully functional runner to accept jobs!
 
 ![preview_runner](https://raw.githubusercontent.com/Kimserey/BlogArchive/master/img/20171207_gitlab_ci/1_runner.PNG)
 
 ## 3. Configure your job
 
-Next what we need to do is to create a job by adding a `.gitlab-ci.yml` in the root of our application.
+Next what we need to do is to create a job by adding a `.gitlab-ci.yml` in the root of our application:
 
 ```
 stages:
@@ -89,11 +91,20 @@ deploy:
     - default
 ```
 
-The pipeline will be composed by 3 jobs. `stages` defines the stage which categorized the jobs and allow similar jobs to run simultaneously. In this small samples, we don't need to run multiple jobs concurrently therefore we have 3 stages and 1 job per stage.
-Here are code under the `script` section of each task is running using command line. This has been set in the runner configuration and can be seen in the toml configuration file `executor = "shell"`.
-For the first `build task`, we run `dotnet build` which is the default way of buidling ASP NET Core application using the dotnet CLI.
-Next in the `test task`, we run `dotnet test` which will run all our test.
-And lastly the `deploy task` will run a script file which I have place locally on my machine at a define path.
+The full documentation for the yaml configuration can be found on GitLab [https://docs.gitlab.com/ee/ci/yaml/](https://docs.gitlab.com/ee/ci/yaml/).
+
+The pipeline will be composed by 3 jobs called:
+ - build
+ - test
+ - deploy
+ 
+`stages` defines the stage which categorized the jobs and allow similar jobs to run simultaneously. In this small samples, we don't need to run multiple jobs concurrently therefore we have 3 stages and 1 job per stage.
+
+Under each jobs, the `script` section is a list of command line to run. This has been set in the runner configuration and can be seen in the toml configuration file `executor = "shell"`. It is possible to set the runner to execute bash or others. Respectively, the command line are:
+
+- For the first job `build`, we run `dotnet build` which is the default way of buidling ASP NET Core application using the dotnet CLI,
+- Next in `test`, we run `dotnet test` which will run all our test,
+- And lastly in `deploy` will run a script file which I have place locally on my machine at a define path.
 
 The content of my `Publish.cmd` is as followed:
 
@@ -118,23 +129,30 @@ sc start %APP%
 
 A very simple command line script which check if the application has been deployed already, if it hasn't, it will create the path and create a Windows service targeting the ASP NET Core application then will publish using `dotnet publish` and specifying the output path as the distrubtion path which the Windows service run. Then complete by starting the Windows service.
 
-_Of course I am assume that the ASP NET Core application runs as a Windows service. This can easily be configured using the library `Microsoft.AspNetCore.Hosting.WindowsServices` and following the tutorial on the official documentation [https://docs.microsoft.com/en-us/aspnet/core/hosting/windows-service](https://docs.microsoft.com/en-us/aspnet/core/hosting/windows-service)._
+_As I mentioned earlier, the ASP NET Core application runs as a Windows service. This can easily be configured using the library `Microsoft.AspNetCore.Hosting.WindowsServices` and following the tutorial on the official documentation [https://docs.microsoft.com/en-us/aspnet/core/hosting/windows-service](https://docs.microsoft.com/en-us/aspnet/core/hosting/windows-service)._
 
 ## 4. Monitor your deployment on GitLab
 
-Now that we have our runner setup and we have the `.gitlab-ci.yml` file configured, after that we push our application to master, we can visualize the pipeline on GitLab CI/CD section.
+Now that we have our runner setup and we have the `.gitlab-ci.yml` file configured, the automation of the build and deployment is completed. But another very important part of CI/CD is the transparency. Being able to visualize the current stages of a deployment and being able to pin point errors quickly. To answer that GitLab offers a whole set of UI which allows us to visualize the pipeline in all its aspects. It can be found on the GitLab CI/CD section.
+
+We can visualize the pipeline overview:
 
 ![pipeline](https://raw.githubusercontent.com/Kimserey/BlogArchive/master/img/20171207_gitlab_ci/2_pipeline.PNG)
 
-The pipeline allows to see the job execution as consecutive steps and in which steps the deployment failed. At each steps, we will see a failure sign with a red cross where we can check logs for more details directly from GitLab UI.
-Each step is actually a job and the list of all the jobs ever ran for your repository can be seen in the list of jobs.
+This UI allows to see the job execution as consecutive steps and in which steps the deployment failed. At each steps, we will see a failure sign with a red cross where we can check logs for more details directly from GitLab UI.
+
+Since each step is actually a job, we can also visualize all the jobs ever ran for our repository:
 
 ![jobs](https://raw.githubusercontent.com/Kimserey/BlogArchive/master/img/20171207_gitlab_ci/3_jobs.PNG)
 
-This can allow us to quickly pin point where a problem sits. Lastly, we can also see the environments we have and which application is currently deployed under that environement.
+This can allow us to quickly pin point where a problem sits. 
+
+Lastly, once deployed to a particular environment, we can also see which application has been currently deployed under any environements:
 
 ![environment](https://raw.githubusercontent.com/Kimserey/BlogArchive/master/img/20171207_gitlab_ci/4_environments.PNG)
 
 And that's it, we have setup all the tools required and we now know how to debug in case of errors, we now have a complete solution CI/CD and we are able to manage from GitLab UI any aspect of the integration and deployment!
 
 # Conclusion
+
+Today we saw how we could setup CI/CD for our example application using the free services provided by GitLab. We learnt what were the steps to get the automation running and we learnt about the different UI available to allow us to pinpoint errors happening either at build time or during deployment. There are many more options for configuration which can be used, for example to target different runners. If you have any questions, leave it here or hit me on Twitter [@Kimserey_Lam](https://twitter.com/Kimserey_Lam). See you next time!
