--- a/20171222_EF_core.md
+++ b/20171222_EF_core.md
@@ -9,6 +9,8 @@ Today we will see how we can store array of values as property of our model and 
 2. Save array of primitive type values
 ```
 
+All the code can be found on [my GitHub](https://github.com/Kimserey/ef-core-sqlite).
+
 ## 1. Install EntityFramework Core Sqlite
 
 In this example I will be using Sqlite.
