--- a/20171222_EF_core.md
+++ b/20171222_EF_core.md
@@ -13,31 +13,78 @@ All the code can be found on [my GitHub](https://github.com/Kimserey/ef-core-sql
 
 ## 1. Install EntityFramework Core Sqlite
 
-In this example I will be using Sqlite.
-We start by creating two projects,  a DotNet Core AspNet Core project and a DotNet Standard library project.
+_In this example I will be using Sqlite._
 
-In the library we install EntityframeworkCore.
-In the web project we install EF Core.Sqlite and .Design.
+We start by creating two projects, a .NET Core/ASP.NET Core project and a .NET Standard library project. In the library we install `Microsoft.EntityFrameworkCore` and in the web project we install `Microsoft.EntityFrameworkCore.Sqlite` and `Microsoft.EntityFrameworkCore.Design`.
+
+```
+- ASP.NET Core
+  - Microsoft.EFCore.Sqlite
+  - Microsoft.EFCore.Design
+
+- .NET Standard Library
+  - Microsoft.EFCore
+```
+
 After installing the lib we enable the EF tools on the dotnet CLI by adding the following reference in the project file:
 
 ```
+<ItemGroup>
+    <DotNetCliToolReference Include="Microsoft.EntityFrameworkCore.Tools.DotNet" Version="2.0.1" />
+</ItemGroup>
 ```
 
-Next we create our model and our db context.
+Next we create our model and our db context in the library project. Here I am creating a dumb model as example.
 
 ```
+public class Value
+{
+    [Key]
+    public int Key { get; set; }
+    public string Data { get; set; }
+    public string[] Tags { get; set; }
+}
 ```
 
-Note that the dbcontext must hav6e a constructor taking in DbContextOption.
+```
+public class ValueDbContext: DbContext
+{
+    public DbSet<Value> Values { get; set; }
+
+    public ValueDbContext(DbContextOptions<ValueDbContext> options): base(options) { }
+}
+```
+
+Note that the Dbcontext must have a constructor taking in `DbContextOptions<TDbContext>`.
 
 Next in our web project we register the DbContext and specify that we will be using sqlite provider and giving in the database connection string.
 
 ```
+public void ConfigureServices(IServiceCollection services)
+{
+    ... some other configs
+
+    services.AddDbContext<ValueDbContext>(options =>
+    {
+        options.UseSqlite(
+            "Data source={Db name}.db", 
+            opts => opts.MigrationsAssembly("{Name of the web project assembly}"));
+    });
+}
+
 ```
 
 Because our web project will be the one holding the migration files, we need to specify that the migrations library is the web project. By default the migrations library is the one containing the DbContext.
 
-Now when we try to create the migration we should hit an error indicating that string[] can't be translated.
+```
+opts => opts.MigrationsAssembly("{Name of the web project assembly}")
+```
+
+Now when we try to create the migration we should hit an error indicating that `string[]` can't be translated.
+
+```
+The property 'Value.Tags' could not be mapped, because it is of type 'String[]' which is not a supported primitive type or a valid entity type. Either explicitly map this property, or ignore it using the '[NotMapped]' attribute or by using 'EntityTypeBuilder.Ignore' in 'OnModelCreating'.
+```
 
 ## 2. Save array of primitive type values
 
@@ -46,6 +93,8 @@ What we want is to be able to store the array in a single cell of our table but 
 To achieve that we need to start by indicating to EF that we do not want the Tags property to me mapped.
 
 ```
+[NotMapped]
+public string[] Tags { get; set; }
 ```
 
 Once we have specified that, EF will no longer save our property.
@@ -53,14 +102,63 @@ Once we have specified that, EF will no longer save our property.
 Next we need to indicate to EF that we want to save a backed property. We start by creating the property.
 
 ```
+public class Value
+{
+    [Key]
+    public int Key { get; set; }
+
+    public string Data { get; set; }
+
+    private string _tags;
+    [NotMapped]
+    public string[] Tags { get; set; }
+}
 ```
 
 Next in the db context we specify that we wish to save the backed property together with the name of the column which will created on the table.
 
 ```
+public class ValueDbContext: DbContext
+{
+    public DbSet<Value> Values { get; set; }
+
+    public ValueDbContext(DbContextOptions<ValueDbContext> options): base(options) { }
+
+    protected override void OnModelCreating(ModelBuilder modelBuilder)
+    {
+        modelBuilder.Entity<Value>()
+            .Property<string>("TagCollection")
+            .HasField("_tags");
+    }
+}
 ```
 
-Lastly we can modify the getter and setter of the property to modify the backed property.
+Lastly we can modify the getter and setter of the property to modify the backed property:
+
+```
+public class Value
+{
+    private static readonly char delimiter = ';';
+    private string _tags;
+
+    [Key]
+    public int Key { get; set; }
+
+    public string Data { get; set; }
+
+    [NotMapped]
+    public string[] Tags
+    {
+        get { return _tags.Split(delimiter); }
+        set
+        {
+            _tags = string.Join($"{delimiter}", value);
+        }
+    }
+}
+```
+
+The backed property will save the array of string as delimited string `a;b;c;d` and when taken out of the database, it will be broken and converted back to an array of string.
 
 # Conclusion
 
