--- a/20171222_EF_core.md
+++ b/20171222_EF_core.md
@@ -99,7 +99,7 @@ public string[] Tags { get; set; }
 
 Once we have specified that, EF will no longer save our property.
 
-Next we need to indicate to EF that we want to save a backed property. We start by creating the property.
+Next we need to indicate to EF that we want to save a backing field `_tags`. We start by creating the property.
 
 ```
 public class Value
@@ -115,7 +115,7 @@ public class Value
 }
 ```
 
-Next in the db context we specify that we wish to save the backed property together with the name of the column which will created on the table.
+Next in the db context we specify that we wish to save the backing field together with the name of the column which will created on the table.
 
 ```
 public class ValueDbContext: DbContext
@@ -133,7 +133,7 @@ public class ValueDbContext: DbContext
 }
 ```
 
-Lastly we can modify the getter and setter of the property to modify the backed property:
+Lastly we can modify the getter and setter of the property to modify the backing field:
 
 ```
 public class Value
@@ -158,7 +158,7 @@ public class Value
 }
 ```
 
-The backed property will save the array of string as delimited string `a;b;c;d` and when taken out of the database, it will be broken and converted back to an array of string.
+The backing field will save the array of string as delimited string `a;b;c;d` and when taken out of the database, it will be broken and converted back to an array of string.
 
 # Conclusion
 
