--- a/20171222_EF_core.md
+++ b/20171222_EF_core.md
@@ -1,8 +1,7 @@
 # Save array of string EntityFramework Core
 
-EntityFramework Core gives us the possibility to translate objects relation into a relational database compatible format.
-Relational databases operates with tables, rows and columns. If we have an object containing an array of objects, it would translate to two tables and a JOIN between the two tables. This behaviour is great if our initial model has links to other objects but when the array inside of model is only composed by primitive type values, like strings or ints, it would be overkill to take that route.
-Today we will see how we can store array of values as property of our model and stay away from the JOIN.
+EntityFramework is a ORM where R stands for Relational (database). Relational databases operate with tables, rows and columns. If we have an object containing an array of objects, by default, it would translate to two tables and a JOIN between the two tables. This behaviour is great if our initial model has links to other objects but not so great when the array inside of model is only composed by primitive type values, like strings.
+Today we will see how we can store array of values as property of our model and prevent having to create two tables with a JOIN.
 
 ```
 1. Install EntityFramework Core Sqlite
