completed process blog

--- a/20180127_process.md
+++ b/20180127_process.md
@@ -27,25 +27,73 @@ DotNet Core comes with a Process API which can be used to create and execute pro
 
 We start first by creating a process:
 
+```
+var process = new Process();
+```
+
 Then we set the start parameters like the file name, the string arguments:
+
+```
+process.StartInfo.FileName = "7z";
+process.StartInfo.Arguments = "x .\\archive.zip -o.\\archive"
+```
 
 We also set it as such as the process does not create any window and we set it to no use `ShellExecute`:
 
-Setting `UseShellExecute` to false allows to redirect standard output and error. Setting it to true would be used to open files like .html files with default browser or .txt with notepad. In our case we just want to execute a command in the background and redirect the output so we set it to false.
-
-redirect output
-
-UseShellExecute false
-CreateNoWindow true
 ```
-var process = new Process();
-process.StartInfo.FileName = $"Scripts/deploy.{artifactName}.cmd";
-process.StartInfo.RedirectStandardOutput = true;
-process.StartInfo.RedirectStandardError = true;
 process.StartInfo.CreateNoWindow = true;
 process.StartInfo.UseShellExecute = false;
-process.Start();
-Console.Write(process.StandardOutput.ReadToEnd());
-Console.Write(process.StandardError.ReadToEnd());
-return Ok();
 ```
+
+Setting `UseShellExecute` to false allows to redirect standard output and error. Setting it to true would be used to open files like .html files with default browser or .txt with notepad. For example the following code opens directly the zip file with your default program for zip:
+
+```
+var process = new Process();
+process.StartInfo.UseShellExecute = true;
+process.StartInfo.FileName = ".\\archive.zip";
+process.Start();
+```
+
+In our case we just want to execute a command in the background and redirect the output so we set it to false.
+To redirect the output we can either use a delegate like so:
+
+```            
+process.StartInfo.RedirectStandardOutput = true;
+process.OutputDataReceived += (sender, data) => {
+    Console.WriteLine(data.Data);
+};
+
+process.StartInfo.RedirectStandardError = true;
+process.ErrorDataReceived += (sender, data) => {
+    Console.WriteLine(data.Data);
+};
+```
+
+Lastly we simply start the process:
+
+```
+process.Start();
+```
+
+And that's it, we can now run our command from C#. As we can imagine, we could expose this from a Console App or from an ASP .Net Core api endpoint.
+
+```
+var process = new Process();
+process.StartInfo.FileName = "7z";
+process.StartInfo.Arguments = "x .\\archive.zip -o.\\archive"
+process.StartInfo.UseShellExecute = false;
+process.StartInfo.CreateNoWindow = true;
+process.StartInfo.RedirectStandardOutput = true;
+process.OutputDataReceived += (sender, data) => {
+    Console.WriteLine(data.Data);
+};
+process.StartInfo.RedirectStandardError = true;
+process.ErrorDataReceived += (sender, data) => {
+    Console.WriteLine(data.Data);
+};
+process.Start();
+```
+
+# Conclusion
+
+Today we saw how we could run a process from C# where we could execute an extraction of a zip file using 7z. Hope this post was helpful! See you next time!
