--- a/20180201_ng_router.md
+++ b/20180201_ng_router.md
@@ -119,3 +119,4 @@ For example here `bye` value in `MyHelloComponent` will be `Bye` while in `MySec
 
 # Conclusion
 
+Params and data in Angular Router are very important to initialize a component based on the route access by the user. Few days ago Angular released a new feature of the router called `paramsInheritanceStrategy`. Params inheritance strategy can be used to allow inheritance of all params and data for child routes. In this post we drafted the problem and saw how `paramsInheritanceStrategy` is used to solve the problem of accessing params and data from child route components. Hope you like this post, see you next time!
