--- a/20180208_ssl_free.md
+++ b/20180208_ssl_free.md
@@ -1,3 +1,48 @@
-# SSL for free with Let's Encrypt browser implementation
+# SSL with Let's Encrypt
 
-Few months ago I posted an explanation on how SSL worked.
+Few months ago I explained briefly how SSL could be setup with CloudFlare. Today I would like to share another way to get a SSL certificate for free via a browser based implementation of Let's Encrypt.
+This post will be composed by two parts:
+
+```
+1. How SSL works
+2. How to get the certificate
+```
+
+# 1 . How SSL works
+
+SSL provides a secure layer on top of HTTP. It allows to encrypt communication between client and server in order to prevent man in the middle attacks and eavesdropping.
+
+An SSL is composed by two pieces, a certificate and a private key.
+The private key must be securely kept by the server while the certificate is distributed to all client.
+
+The goal of the SSL is to ensure two things:
+ 
+ 1. Encryption of data between server and client
+ 2. Authenticity of the certificate provided
+
+### 1.1 Encryption of data between server and client
+
+The encryption is established by an asymetric key pair.
+The private key is held by the server while the public key is distributed to clients within the cert.
+
+During the handshake process, a symmetric key is created and exchanged in a secure why via the encryption using the inital assymetric key pair. From then on every messages exchanged between server and client can only be decrypted by either the client or the server.
+
+The symmetric key is necessary because if we were to use the asymetric key, any client would be able to decrypt messages sent to other clients using the public key in the cert.
+
+In this manner all communications are encrypted. But nothing prevents someone to impersonate the server and provide the client with its own certificate and public key which the client will trust and send its data to this malicious server.
+
+Here comes the certifacte authority.
+
+### 2. Authenticity of the certificate provided
+
+Certificate authorities are the companies which manage SSL certificates. They are the police of certificates hence their name.
+
+As explained in 1), anyone could create a certificate and deliver it to the client but what prevents it from happening is that browsers, Chrome, Firefox, Edge, etc... only trust certificates which were certified by certificate authorities.
+
+Every certificate authorities have an asymetric key pair and use their private key to sign each certificates they deliver.
+The public key is held inside all browsers. Chrome, Firefox etc were installed with a big list of certificate authorities together with their public key.
+When an SSL connection tries to occur, the certificate is exchanged and the browser will use its CA public key to decrypt the signature and validate the content of the cert.
+
+_Asymetric keys are bidirectional, messages encrypted by the private key can only be decrypted by the public key and messages encrypted by the public key can only be decrypted by the public key._
+
+It isn't possible to forge the signature of the certificate without possessing the private key which is held by the certificate authority therefore it isn't possible to forge a certificate at all which allows to protect against impersonation of the server.
